--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex: 1 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+/*------------CSS FOR BUTTONS------------*/
+.component-button {
   color: white;
+  font-weight: bold;
+  padding: 5px;
+  position: fixed;
+  width: 85px;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  margin: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.button1 {
+  top: 0%;
+  right: 95%;
+  background-color: royalblue;
+}
+.button2 {
+  top: 0%;
+  right: 0%;
+  background-color: crimson;
+}
+.button3 {
+  top: 95%;
+  right: 95%;
+  background-color: plum;
+}
+.button4 {
+  top: 95%;
+  right: 0%;
+  background-color: yellowgreen;
 }
 
-@keyframes App-logo-spin {
+/*------------CSS FOR SQUARES TO COLOR------------*/
+.lign_center {
+  display: flex;
+  justify-content: center;
+  margin: 25% 50px;
+  flex: 1 100%;
+}
+
+@keyframes appear {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
+}
+
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.square {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 25px;
+  text-align: center;
+  background: white;
+  margin: 4px;
+  color: white;
+  transition: all 333ms ease-in-out;
+  transition-delay: 100ms;
+  border: black;
 }
